Fixed layout issue caused by new relationship input CSS

--- a/www/comps/builder/builderForm.css
+++ b/www/comps/builder/builderForm.css
@@ -121,7 +121,7 @@
 
 /* fields */
 .builder-field{
-	flex:1 0 auto;
+	flex:1 1 auto;
 	min-height:24px;
 	margin:0px 5px 5px 0px;
 	background-color:var(--color-bg);
